<resources>
    <string name="app_name">School App</string>
    <string name="title_activity_login">School App</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"R e l a a a x !"</string>
    <string name="welcome_note">"I want to welcome you all to a new year at BlackHill School.  We are proud to have you all here and are excited about working with each and every one of you.  BlackHill is a community of learners that strives to prepare students for college, careers and opportunities after high school.  \n\nThe staff at BlackHill is dedicated to creating a safe and supportive school that aims at creating a community of learners where everyone can succeed.  We do this through holding each community member to high expectations. "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="directors_name">"~Ikeme Funa, Director"</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_tools">App Settings</string>
    <string name="add_student">Add Student</string>
    <string name="view_student">View Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="staff">Staff</string>
    <string name="courses">Courses</string>
    <string name="add_course">Add Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="view_course">View Course</string>

    <string name="admin_welcome_note">What Can You Do?</string>
    <string name="admin_doos">"
        1. Register Student\n
        2. Register Staff\n
        3. Register other administrators\n
        4. Register Courses\n
        5. Editing the added items\n
        6. View the registered items
    </string>

    <string name="student_id">"Student ID"</string>
    <string name="staff_id">"Staff ID"</string>
    <string name="first_name">"First Name"</string>
    <string name="middle_name">"Middle Name"</string>
    <string name="last_name">"Last Name"</string>
    <string name="gender">Gender</string>
    <string name="birth_date">"Date of Birth</string>
    <string name="email">Email</string>
    <string name="phone_no">"Phone Number"</string>
    <string name="region">Region</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="assign_password">"Assign Password"</string>
    <string name="confirm_password">"Confirm Password"</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="place_of_residence">"Place of Residence"</string>
    <string-array name="region">
        <item>Select Region</item>
    </string-array>
    <string-array name="district">
        <item>Select District</item>
    </string-array>
    <string-array name="ward">
        <item>Select Ward</item>
    </string-array>

    <string name="add_staff">Add Staff</string>
    <string name="edit_staff">Edit Staff</string>
    <string name="view_staff">View Staff</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
