<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.schoolapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.schoolapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_add_student"
        android:name="com.example.schoolapp.ui.addStudent.AddStudent"
        android:label="@string/add_student"
        tools:layout="@layout/fragment_add_student" />

    <fragment
        android:id="@+id/nav_add_staff"
        android:name="com.example.schoolapp.ui.addStaff.addStaff"
        android:label="@string/add_staff"
        tools:layout="@layout/fragment_add_student" />
</navigation>